# IBM-BOB-Haackathon-submission-BOB_RAG

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  BOB_USAGE_REPORT.md  Dockerfile  README.md  docker-compose.yml  download_data.sh  pyproject.toml  start.sh
.bob/: AGENTS.md  CONTEXT-CACHE.md  README.md  custom_modes.yaml
.bob/modes/: documenter-prompt.md
.bob/notes/: pending-notes.txt
.bob/rules-code/: 01-builder.md
.bob/rules-orchestrator/: 01-team-lead.md
.bob/rules-validator/: 01-validator.md
.github/: pull_request_template.md
api/: main.py  schemas.py
api/routers/: health.py  query.py
app_docs/: CHANGELOG.md  README.md
bob_sessions/: bob_task_may-17-2026_12-10-42-am..md  bob_task_may-17-2026_12-56-26-am.md
dashboard/: README.md  package-lock.json
dashboard-starter/: SETUP.md  package.json
dashboard-starter/app/: layout.tsx  page.tsx
dashboard/app/: globals.css
dashboard/components/: BobcoinGauge.tsx  CodebaseGraph.tsx  RagTraces.tsx  RagasRadar.tsx  SessionTimeline.tsx
data/corpus/: antibiotics.txt  hypertension.txt  metformin.txt
docs/: ARCHITECTURE.md  BOB_PROMPTS.md  BOB_SESSION_PLAN.md  CODE_MAP.md  FINISHING_PLAN.md  ONBOARDING.md  TECH_DEBT.md  TESTING_PLAN.md
docs/BOB_SESSIONS/: session-2026-05-16T14-53-9d9df825.json  session-2026-05-16T15-03-36c1561f.json  session-2026-05-16T15-25-36c1561f.json  session-2026-05-16T16-21-36c1561f.json
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
ingestion/: loader.py  pipeline.py
llm/: ollama_client.py
planning/: MASTER_PLAYBOOK.md  PITCH.md  SUBMISSION_CHECKLIST.md
rag/: citations.py  pipeline.py  retriever.py
scripts/: download_statpearls.py  parse_usage.py  setup.sh  vendor_docrag.ps1
tests/: conftest.py  test_citations.py  test_health.py  test_ingestion_pipeline.py  test_pipeline.py  test_query.py  test_retriever.py
(+17 files in other folders)
