[project]
name = "bobrag-md"
version = "0.1.0"
description = "BobRAG-MD: Minimal medical RAG for IBM Bob Hackathon"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ahmed", email = "ahmed@example.com" }
]

dependencies = [
    "google-generativeai>=0.8.0",
    "qdrant-client>=1.11.0",
    "sentence-transformers>=3.0.0",
    "langfuse>=2.50.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
]

[project.scripts]
bobrag = "bobrag.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bobrag"]

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
